Anadimos apartado Requerimientos. Otros.

--- a/src/app/layouts/home/home.component.html
+++ b/src/app/layouts/home/home.component.html
@@ -38,7 +38,7 @@
   <!--============ MISSION VIDEOS ============ -->
   <!--======================================== -->
 
-  <!-- <app-requirements></app-requirements> -->
+  <app-requirements></app-requirements>
 
 
   <!--======================================== -->
@@ -50,7 +50,7 @@
   <!--======================================== -->
   <!--========== CURRENT YEAR TOUR =========== -->
   <!--======================================== -->
-  <app-currentyear-tour></app-currentyear-tour>
+  <!-- <app-currentyear-tour></app-currentyear-tour> -->
   
   
   <!--======================================== -->
@@ -123,6 +123,7 @@
           </div> 
       </div>
 
+      <br>
       <br>
       <div class="row text-center pb-1">
           <div class="col-12 col-lg">
