--- a/src/app/shared/legal-notice-modal/legal-notice-modal.component.html
+++ b/src/app/shared/legal-notice-modal/legal-notice-modal.component.html
@@ -2,7 +2,7 @@
 
 <mat-dialog-content>
 
-  <section id="legal-notice" [hidden]="currentLang===ENGLISH">
+  <section id="legal-notice" [hidden]="translate.currentLang===ENGLISH">
 
       <h2>Aviso Legal</h2>
       <p>
@@ -67,7 +67,7 @@
   </section>
 
   
-  <section id="legal-notice" [hidden]="currentLang===ESPANOL">
+  <section id="legal-notice" [hidden]="translate.currentLang===ESPANOL">
 
       <h2>Legal Notice</h2>
       <p>
