--- a/src/app/shared/privacy-modal/privacy-modal.component.html
+++ b/src/app/shared/privacy-modal/privacy-modal.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Política de Privacidad</h2>
+<h2 mat-dialog-title>{{ 'HOME.FOOTER.PRIVACY_POLICY' | translate }}</h2>
 
 <mat-dialog-content>
 
