--- a/src/app/layouts/home/joinus-missions/joinus-missions.component.scss
+++ b/src/app/layouts/home/joinus-missions/joinus-missions.component.scss
@@ -4,7 +4,7 @@
 #uneteMisiones {
 
     background-color: #f9f9f9;
-    padding: 40px 25px;
+    padding: 60px 25px 70px 25px;
 
   
     .container {
@@ -56,6 +56,14 @@
 
             mat-form-field {
               width: 100%;
+            }
+
+            #mailIcon {
+              // border: 5px 5px 0 0;
+              border-right: 5px;
+              position: relative;
+              top: 6px;
+              color: gray;
             }
         
             mat-checkbox {
