--- a/src/app/layouts/home/prevyear-video/prevyear-video.component.scss
+++ b/src/app/layouts/home/prevyear-video/prevyear-video.component.scss
@@ -5,11 +5,15 @@
     
     //=========== NORMAL SCREEN SIZE ===========//
     @media only screen and (min-width: 1047px) {
-        padding: 80px 80px;
+        padding: 80px 70px;
     }
     //=========== CELL PHONE SIZE ===========//
     @media only screen and (max-width: 1046px) {
-        padding: 80px 80px;
+        padding: 80px 70px;
+    }
+    //=========== CELL PHONE SIZE ===========//
+    @media only screen and (max-width: 612px) {
+        padding: 80px 15px;
     }
     //=========== CELL PHONE SIZE ===========//
     @media only screen and (max-width: 414px) {
@@ -24,7 +28,7 @@
         justify-content: center;
         align-items: center;
         margin: 0 auto;
-        margin-bottom: 0px;
+        // margin-bottom: 0px;
         // padding-left: 80px;
         // padding-right: 80px;
         // background: linear-gradient(to bottom, #f4f4f4, #e0e0e0); // Fondo suave
@@ -35,22 +39,38 @@
             // max-width: 350px;
             // display: block;
             display: flex;
-            justify-content: center;
-
+            
             //=========== NORMAL SCREEN SIZE ===========//
             @media only screen and (min-width: 1047px) {
                 width: 50%;
-                padding: 0 20px 30px 20px;
+                justify-content: right;
+                padding: 0 70px 30px 20px;
             }
             //=========== CELL PHONE SIZE ===========//
             @media only screen and (max-width: 1046px) {
                 width: 100%;
+                justify-content: center;
                 padding: 0 20px 30px 20px;
             }
             //=========== CELL PHONE SIZE ===========//
+            @media only screen and (max-width: 612px) {
+                width: 100%;
+                justify-content: center;
+                padding: 0 0px 30px 0px;
+                // padding: 0 20px 30px 20px;
+            }
+            //=========== CELL PHONE SIZE ===========//
+            @media only screen and (max-width: 560px) {
+                width: 100%;
+                justify-content: center;
+                padding: 0 50px 30px 50px;
+                // padding: 0 20px 30px 20px;
+            }
+            //=========== CELL PHONE SIZE ===========//
             @media only screen and (max-width: 414px) {
-                padding: 80px 20px;
-                padding: 0 15px 30px 15px;
+                // justify-content: center;
+                // padding: 80px 20px;
+                padding: 0 25px 30px 25px;
             }
 
             
@@ -62,6 +82,17 @@
                 width: 100%;
                 max-width: 400px; /* Ancho fijo */
                 max-height: 500px; /* Alto fijo */
+                //=========== CELL PHONE SIZE ===========//
+                @media only screen and (max-width: 560px) {
+                    // max-width: 360px; /* Ancho fijo */
+                    // max-height: 460px; /* Alto fijo */
+                }
+                //=========== CELL PHONE SIZE ===========//
+                @media only screen and (max-width: 414px) {
+                    // max-width: 350px; /* Ancho fijo */
+                    // max-height: 450px; /* Alto fijo */
+                }
+
                 aspect-ratio: 9 / 16; /* Proporción vertical */
             }
 
@@ -72,7 +103,7 @@
 
             // display: flex;
             justify-content: left;
-            padding: 0 20px;
+            
 
             // flex-direction: column;
             // align-items: center;
@@ -82,11 +113,23 @@
 
             //=========== NORMAL SCREEN SIZE ===========//
             @media only screen and (min-width: 1047px) {
-                width: 35%;
+                width: 33%;
+                padding: 0;
             }
             //=========== CELL PHONE SIZE ===========//
             @media only screen and (max-width: 1046px) {
                 width: 100%;
+                padding: 0 20px;
+            }
+            //=========== CELL PHONE SIZE ===========//
+            @media only screen and (max-width: 612px) {
+                width: 100%;
+                padding: 0 70px;
+            }
+            //=========== CELL PHONE SIZE ===========//
+            @media only screen and (max-width: 414px) {
+                width: 100%;
+                padding: 0 30px;
             }
 
 
