--- a/src/app/layouts/home/requirements/requirements.component.scss
+++ b/src/app/layouts/home/requirements/requirements.component.scss
@@ -1,149 +1,268 @@
-@import '../../../../styles/_variables.scss';
+// @import '../../../../styles/_variables.scss';
 
-#previousYearVideo {
 
-    
+#requirementsSection {
+
+    // background-color: rgb(33, 33, 33);
+    background-color: rgb(252, 227, 178);
+    // color: white;
+
     //=========== NORMAL SCREEN SIZE ===========//
     @media only screen and (min-width: 1047px) {
-        padding: 80px 80px;
+        padding: 80px 60px 70px 60px;
     }
     //=========== CELL PHONE SIZE ===========//
     @media only screen and (max-width: 1046px) {
-        padding: 80px 80px;
+        padding: 80px 60px 70px 60px;
     }
     //=========== CELL PHONE SIZE ===========//
     @media only screen and (max-width: 414px) {
-        padding: 80px 25px;
+        padding: 80px 25px 70px 25px;
     }
 
-    .videoRow {
 
-        display: flex;
-        flex-wrap: wrap;
-        width: 100%;
-        justify-content: center;
-        align-items: center;
-        margin: 0 auto;
-        margin-bottom: 0px;
-        // padding-left: 80px;
-        // padding-right: 80px;
-        // background: linear-gradient(to bottom, #f4f4f4, #e0e0e0); // Fondo suave
-        // padding: 0;
+    .requirementRow {
 
-  
-        .videoContainer {
-            // max-width: 350px;
-            // display: block;
             display: flex;
+            flex-wrap: wrap;
+            width: 100%;
+            // height: 100%;
             justify-content: center;
-
-            //=========== NORMAL SCREEN SIZE ===========//
-            @media only screen and (min-width: 1047px) {
-                width: 50%;
-            }
-            //=========== CELL PHONE SIZE ===========//
-            @media only screen and (max-width: 1046px) {
-                width: 100%;
-            }
-            padding: 0 20px 30px 20px;
-            // margin-left: 20px;
-            // margin-right: 20px;
-            // margin-bottom: 30px;
-
-            .vertical-video {
-                width: 100%;
-                max-width: 400px; /* Ancho fijo */
-                max-height: 500px; /* Alto fijo */
-                aspect-ratio: 9 / 16; /* Proporción vertical */
-            }
-
-
-        } //end videoContainer
-
-        .videoTextContainer {
-
-            // display: flex;
-            justify-content: left;
-
-            // flex-direction: column;
-            // align-items: center;
-            // gap: 20px;
-            // padding: 20px;
-            // background-color: lighten(#1e2757, 20%); // Un azul más claro
-
-            //=========== NORMAL SCREEN SIZE ===========//
-            @media only screen and (min-width: 1047px) {
-                width: 35%;
-            }
-            //=========== CELL PHONE SIZE ===========//
-            @media only screen and (max-width: 1046px) {
-                width: 100%;
-            }
+            align-items: center;
+            margin: 0 auto;
+            // padding-left: 80px;
+            // padding-right: 80px;
+            // background: linear-gradient(to bottom, #f4f4f4, #e0e0e0); // Fondo suave
+            // padding: 0;
 
 
 
-            .verse {
-                font-size: 1.1rem;
-                font-weight: bold;
-                color: #333;
-                margin: 15px 0;
-                padding: 10px;
-                background: #ffffff;
-                // border-radius: 5px;
+            .brochureContainer {
 
-                .quote {
-                    display: block;
-                    font-style: italic;
-                    color: #555;
-                }
+                display: flex;
+                padding: 0;
+                margin: 0 auto;
                 
-                .reference {
-                    display: block;
-                    font-size: 1rem;
-                    font-weight: bold;
-                    color: $gamaColor6; // Color azul para resaltar
-                    margin-top: 5px;
-                }
-
-            } //end verse
-
-
-            #verse1 {
+                // padding: 0;
+            
                 //=========== NORMAL SCREEN SIZE ===========//
-                @media only screen and (min-width: 1047px) {
-                    margin: 0px 0px 15px 0px;
+                @media only screen and (min-width: 1350px) {
+                    width: 35%;
+                    // max-width: 40%;
+                    // min-width: 40%;
+                    justify-content: right;
+                    // padding: 0 20px 30px 20px;
+                    // padding: 0;
+                }
+                //=========== CELL PHONE SIZE ===========//
+                @media only screen and (max-width: 1349px) {
+                    width: 35%;
+                    justify-content: center;
+                    // padding: 0 20px 30px 20px;
                 }
                 //=========== CELL PHONE SIZE ===========//
                 @media only screen and (max-width: 1046px) {
-                    margin: 50px 0px 15px 0px;
+                    width: 100%;
+                    justify-content: center;
+                    padding: 0 0 70px 0;
                 }
+                // //=========== CELL PHONE SIZE ===========//
+                // @media only screen and (max-width: 612px) {
+                //     width: 100%;
+                //     justify-content: center;
+                //     // padding: 0 0px 30px 0px;
+                //     // padding: 0 20px 30px 20px;
+                // }
+                // //=========== CELL PHONE SIZE ===========//
+                // @media only screen and (max-width: 560px) {
+                //     width: 100%;
+                //     justify-content: center;
+                //     // padding: 0 50px 30px 50px;
+                //     // padding: 0 20px 30px 20px;
+                // }
+                // //=========== CELL PHONE SIZE ===========//
+                // @media only screen and (max-width: 414px) {
+                //     // justify-content: center;
+                //     // padding: 80px 20px;
+                //     // padding: 0 25px 30px 25px;
+                // }
+
+
+                .imageContainer {
+                    display: flex;
+                    justify-content: center;
+                    // width: 100%;
+                    // width: 250px;
+                    // max-width: 450px;
+                    // min-height: 500px; /* Alto fijo */
+                    // height: auto;
+                    // overflow: hidden;
+
+                    //=========== NORMAL SCREEN SIZE ===========//
+                    @media only screen and (min-width: 1350px) {
+                        // margin-left: 20px;
+                        // margin-right: 20px;
+                        // width: 390px;
+                        max-width: 390px;
+                        min-width: 390px;
+                        max-height: 500px; /* Alto fijo */
+                        min-height: 500px; /* Alto fijo */
+                        margin: 0 0;
+                        padding: 0;
+                    }
+                    //=========== NORMAL SCREEN SIZE ===========//
+                    @media only screen and (max-width: 1349px) {
+                        // margin-left: 20px;
+                        // margin-right: 20px;
+                        max-width: 370px;
+                        // min-width: 370px;
+                        max-height: 480px; /* Alto fijo */
+                        // min-height: 480px; /* Alto fijo */
+                        margin: 0 0;
+                        padding: 0;
+                    }
+                    //=========== CELL PHONE SIZE ===========//
+                    @media only screen and (max-width: 1046px) {
+                        min-width: 390px;
+                        min-height: 490px; /* Alto fijo */
+                        margin: 0 auto;
+                        padding: 0;
+                    }
+                    @media only screen and (max-width: 850px) {
+                        min-width: 370px;
+                        min-height: 470px; /* Alto fijo */
+                        margin: 0 auto;
+                        padding: 0;
+                    }
+                    @media only screen and (max-width: 650px) {
+                        max-width: 340px;
+                        min-width: 340px;
+                        min-height: 440px; /* Alto fijo */
+                        margin: 0 auto;
+                        padding: 0;
+                    }
+                    @media only screen and (max-width: 550px) {
+                        max-width: 320px;
+                        min-width: 320px;
+                        min-height: 420px; /* Alto fijo */
+                        margin: 0 auto;
+                        padding: 0;
+                    }
+                    @media only screen and (max-width: 376px) {
+                        padding-left: 20px;
+                        padding-right: 20px;
+                    }
+                    // margin-bottom: 30px;
+                    
+
+                    img {
+                        width: 100%;
+                        height: auto;
+                        display: block;
+                        // width: 250px;
+                        // max-height: 500px; /* Alto fijo */
                 
-                padding: 0px 10px 10px 10px;
-                border-bottom: 1px solid $gamaColor4; // Línea decorativa
-            }
+                        border: 9px solid #fff; // Borde blanco
+                        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.986); // Sombra suave
+                        border-radius: 10px; // Bordes redondeados
+                        transition: transform 0.3s ease, box-shadow 0.3s ease;
+                
+                        
+                        &:hover {
+                            transform: scale(1.05); // Efecto de zoom al pasar el mouse
+                            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); // Sombra más pronunciada al pasar e
+                        }
+                
+                    } //end imageContainer img
 
-            #verse2 {
-                border-bottom: 1px solid $gamaColor4; // Línea decorativa
-            }
+                }
+    
+                
+            } //end brochureContainer
 
-            #verse3 {
-                //=========== NORMAL SCREEN SIZE ===========//
-                @media only screen and (min-width: 1047px) {
-                    display: block;
-                }
-                //=========== CELL PHONE SIZE ===========//
-                @media only screen and (max-width: 1265px) {
-                    display: none;
-                }
-                //=========== CELL PHONE SIZE ===========//
-                @media only screen and (max-width: 1046px) {
-                    display: block;
-                }
-            }
-            
-            
-        } //end videoTextContainer
         
-    } //end videoRow
+
+
+            .requirementTextContainer {
+
+                // display: flex;
+                justify-content: left;
+                line-height: 1.2;
+                color: #333;
+                // color: white;
+                font-size: 0.9rem;
+                // max-width: 800px;
+                // margin: 0 0 ;
+                padding: 0;
+                // padding: 20px;
+
+                //=========== NORMAL SCREEN SIZE ===========//
+                @media only screen and (min-width: 1350px) {
+                    width: 55%;
+                    margin: 0px 30px;
+                }
+                //=========== NORMAL SCREEN SIZE ===========//
+                @media only screen and (max-width: 1349px) {
+                    width: 55%;
+                    margin: 0px 30px;
+                }
+                //=========== CELL PHONE SIZE ===========//
+                @media only screen and (max-width: 1046px) {
+                    width: 80%;
+                    margin: 0 0;
+                }
+                //=========== CELL PHONE SIZE ===========//
+                @media only screen and (max-width: 850px) {
+                    width: 85%;
+                    margin: 0 0;
+                }
+                //=========== CELL PHONE SIZE ===========//
+                @media only screen and (max-width: 650px) {
+                    width: 90%;
+                    margin: 0 0;
+                }
+                //=========== CELL PHONE SIZE ===========//
+                @media only screen and (max-width: 550px) {
+                    width: 95%;
+                    margin: 0 0;
+                }
+
+                #requirementTitle {
+                    font-size: medium;
+                    font-weight: bold;
+                }
+
+
+                .requirementList {
+                    
+                    // padding-left: 20px;
+
+                    li {
+                        
+                        margin-bottom: 10px;
+
+
+                        ul {
+                            padding-left: 20px;
+                            list-style-type: circle;
+                            margin-top: 5px;
+                        }
+                        
+                        .nota {
+                            font-style: italic;
+                            color: #666;
+                            margin-top: 5px;
+                            padding-left: 20px;
+                        }
+                    }
+
+                    
+                } //end requirementList
+                
+                
+            } //end requirementTextContainer
+
+        
+    } //end requirementRow
 
 } //end previousYearVideo
