--- a/src/app/layouts/home/home.component.html
+++ b/src/app/layouts/home/home.component.html
@@ -60,7 +60,18 @@
   <!-- <app-en-currentyeartour [hidden]="translate.currentLang===ESPANOL"></app-en-currentyeartour> -->
   
 
+  <!--======================================== -->
+  <!--=============== COLUMNS ================ -->
+  <!--======================================== -->
 
+  <app-columns></app-columns>
+  
+
+  <!--======================================== -->
+  <!--========= MISSION INFORMATION ========== -->
+  <!--======================================== -->
+
+  <app-mission-info></app-mission-info>
 
   <!--======================================== -->
   <!--=== INFORMACION UNETE A LAS MISIONES === -->
