--- a/src/app/layouts/home/requirements/requirements.component.html
+++ b/src/app/layouts/home/requirements/requirements.component.html
@@ -50,14 +50,14 @@
                       <li>Participar en las reuniones de preparación por Zoom antes del viaje misionero.</li>
                       
                       <li>La capacidad de continuar la misión con una sonrisa y gozo del Señor, incluso en los mayores desafíos.</li>
-                      
+
                   </ul>
           </div>
 
       </div>
   </section>
 
-  <section id="requirementsSection" [hidden]="translate.currentLang===ESPANOL">
+  <section id="englishRequirementsSection" [hidden]="translate.currentLang===ESPANOL">
 
       <div class="requirementRow">
 
